--- a/zkevm-circuits/Cargo.toml
+++ b/zkevm-circuits/Cargo.toml
@@ -12,7 +12,7 @@ halo2_proofs = { git = "https://github.com/appliedzkp/halo2.git", rev = "9d3ab0c
 pairing = { git = 'https://github.com/appliedzkp/pairing', package = "pairing_bn256" }
 bigint = "4"
 num = "0.4"
-sha3 = "0.7.2"
+sha3 = "0.10"
 digest = "0.7.6"
 array-init = "2.0.0"
 paste = "1.0"
@@ -32,6 +32,9 @@ ecc = { path = "../../halo2wrong/ecc/circuit", features = ["kzg"] }
 maingate = { path = "../../halo2wrong/maingate", features = ["kzg"] }
 integer = { path = "../../halo2wrong/integer", features = ["kzg"] }
 group = "0.11"
+k256 = "0.10.4"
+generic-array = "0.12.4"
+libsecp256k1 = "0.7"
 
 [dev-dependencies]
 criterion = "0.3"
