--- a/zkevm-circuits/Cargo.toml
+++ b/zkevm-circuits/Cargo.toml
@@ -35,6 +35,7 @@ group = "0.11"
 k256 = "0.10.4"
 generic-array = "0.12.4"
 libsecp256k1 = "0.7"
+rlp = "0.5"
 
 [dev-dependencies]
 criterion = "0.3"
@@ -42,6 +43,8 @@ hex = "0.4.3"
 mock = { path = "../mock" }
 itertools = "0.10.1"
 pretty_assertions = "1.0.0"
+ethers-signers = "0.6"
+rand_chacha = "0.3"
 
 [[bench]]
 name = "binary_value"
