--- a/zkevm-circuits/Cargo.toml
+++ b/zkevm-circuits/Cargo.toml
@@ -36,6 +36,9 @@ k256 = "0.10.4"
 generic-array = "0.12.4"
 libsecp256k1 = "0.7"
 rlp = "0.5"
+num-bigint = { version = "0.4" }
+log = "0.4"
+subtle = "2.4"
 
 [dev-dependencies]
 criterion = "0.3"
