--- a/zkevm-circuits/Cargo.toml
+++ b/zkevm-circuits/Cargo.toml
@@ -39,6 +39,7 @@ rlp = "0.5"
 num-bigint = { version = "0.4" }
 log = "0.4"
 subtle = "2.4"
+plotters = { version = "0.3.0", optional = true }
 
 [dev-dependencies]
 criterion = "0.3"
@@ -56,3 +57,4 @@ harness = false
 [features]
 default = []
 test = []
+dev-graph = ["halo2_proofs/dev-graph", "plotters"]
