--- a/zkevm-circuits/Cargo.toml
+++ b/zkevm-circuits/Cargo.toml
@@ -27,11 +27,11 @@ lazy_static = "1.4"
 keccak256 = { path = "../keccak256"}
 # ecdsa = { git = "https://github.com/appliedzkp/halo2wrong.git", rev = "00b90e8c3198de0a73cdb6308f7dbea2bd6f24cc", features = ["kzg"] }
 # TODO: Replace by github path once https://github.com/appliedzkp/halo2wrong/pull/25 is merged
-ecdsa = { path = "../../halo2wrong/ecdsa", features = ["kzg"] }
-secp256k1 = { path = "../../halo2wrong/ecc/secp256k1", features = ["kzg"] }
-ecc = { path = "../../halo2wrong/ecc/circuit", features = ["kzg"] }
-maingate = { path = "../../halo2wrong/maingate", features = ["kzg"] }
-integer = { path = "../../halo2wrong/integer", features = ["kzg"] }
+ecdsa = { git = "https://github.com/ed255/halo2wrong", rev = "ed5611493babc39abc41f1249b7b54c4f3c0254c", features = ["kzg"] }
+secp256k1 = { git = "https://github.com/ed255/halo2wrong", rev = "ed5611493babc39abc41f1249b7b54c4f3c0254c", features = ["kzg"] }
+ecc =       { git = "https://github.com/ed255/halo2wrong", rev = "ed5611493babc39abc41f1249b7b54c4f3c0254c", features = ["kzg"] }
+maingate =  { git = "https://github.com/ed255/halo2wrong", rev = "ed5611493babc39abc41f1249b7b54c4f3c0254c", features = ["kzg"] }
+integer =   { git = "https://github.com/ed255/halo2wrong", rev = "ed5611493babc39abc41f1249b7b54c4f3c0254c", features = ["kzg"] }
 group = "0.11"
 k256 = "0.10.4"
 generic-array = "0.12.4"
